# notebooks

./: .gitignore  README.md  binary_pla.ipynb  perceptron.ipynb  pokemon_analysis.ipynb  pyproject.toml  setup  torch_mnist.ipynb
lfd/: learning.ipynb
lfd/.ipynb_checkpoints/: binary_pla-checkpoint.ipynb
